--- a/portalapp/html5_ui/core/layouts/base.html
+++ b/portalapp/html5_ui/core/layouts/base.html
@@ -70,7 +70,7 @@
   <!-- Specific JS goes HERE --> 
   {% block javascripts %}{% endblock javascripts %}
 
-  <script src="/static/core/assets/js/argon.js?v=1.2.0"></script>
+  <script src="{% static '/core/assets/js/argon.js?v=1.2.0' %}"></script>
 
 </body>
 
